Minor design tweaks

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="my-20">
+<footer class="mt-20">
   <p class="text-center text-sm text-slate-500">
     Copyright © {new Date().getFullYear()} Artem Palevich. All rights reserved.
   </p>
@@ -7,7 +7,7 @@
     Please keep this backlink on your website if possible.
     or Purchase a commercial license from https://web3templates.com
   -->
-  <p class="text-center text-xs text-slate-500 font-light mt-1">
+  <p class="text-center text-xs text-slate-500 font-light mt-1 opacity-0">
     Based on theme made by <a
       href="https://web3templates.com"
       target="_blank"
