--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -52,7 +52,7 @@ const features = [
   </p> -->
 </div>
 
-<div class="grid grid-cols-1 lg:grid-cols-3 mt-16 gap-4">
+<div class="grid grid-cols-1 lg:grid-cols-3 my-16 gap-4">
   {
     features.map(({title, subtitle, description, icon}) => (
       <Card text={description}>
