--- a/src/components/bulletpoints.astro
+++ b/src/components/bulletpoints.astro
@@ -1,45 +1,77 @@
-<section class="overflow-hidden py-32">
-    <div class="mx-auto max-w-5xl space-y-16 px-6">
-        <h2 class="text-title relative z-10 max-w-xl text-4xl font-medium lg:text-5xl">The Gemini ecosystem brings together our models.</h2>
-        <div class="grid gap-6 sm:grid-cols-2 md:gap-12 lg:gap-24">
-            <div class="relative z-10 space-y-4">
-                <p class="text-body">Gemini is evolving to be more than just the models. <span class="text-title font-medium">It supports an entire ecosystem</span> — from products innovate.</p>
-                <p>It supports an entire ecosystem — from products to the APIs and platforms helping developers and businesses innovate</p>
+---
+import { Picture } from "astro:assets";
+import portrait_ksenia from "@images/portrait_ksenia.jpeg";
+import portrait_youssef from "@images/portrait_youssef.jpeg";
+import portrait_boris from "@images/portrait_boris.jpeg";
+import portrait_kirill from "@images/portrait_kirill.jpeg";
 
-                <div class="grid grid-cols-2 gap-3 pt-6 sm:gap-4">
-                    <div class="space-y-3">
-                        <div class="flex items-center gap-2">
-                            <svg class="size-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                                <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd"></path>
-                            </svg>
-                            <h3 class="text-title text-sm font-medium">Faaast</h3>
+import laredoute_logo from "../components/ui/icons/la_redoute_logo.jpg";
+import logo_ogilvy from "@images/logo_ogilvy.svg";
+
+import MoscowMarathonLogo from "../components/ui/icons/moscowMarathon_Logo.astro";
+
+const content = [
+    {
+        cardClasses: 'md:col-span-2 md:row-span-2',
+        logo: logo_ogilvy,
+        quote: "Artem is an excellent team player, he quickly picked up on the new workflow, and showed excellent results in working and interacting with the team. We look forward to working with him again!",
+        name: "Ksenia Koteneva",
+        company: "Ogilvy",
+        photo: portrait_ksenia,
+    },
+    {
+        cardClasses: 'md:col-span-2',
+        logo: laredoute_logo,
+        quote: "I got the impression that Artyom was constantly monitoring developments in technology and had his finger on the pulse. More than once he suggested to me new ways to improve my current work just from the technical side — thanks to this I learned a lot and grew as a developer.",
+        name: "Boris Nikitashov",
+        company: "Ex-colleague",
+        photo: portrait_boris,
+    },
+    {
+        cardClasses: 'md:col-span-1',
+        quote: "Strong technical knowledge with a keen understanding of the business stakes. A true asset within a digital team!",
+        name: "Youssef Oulamine",
+        company: "La Redoute",
+        photo: portrait_youssef,
+    },
+    {
+        cardClasses: 'md:col-span-1',
+        quote: "Artem is an experienced developer. I was really happy to work with him!",
+        name: "Kirill Zhirnov",
+        company: "Boundless Commerce",
+        photo: portrait_kirill,
+    },
+
+]
+---
+<section class="bg-white py-20 dark:bg-transparent">
+    <div class="mx-auto max-w-5xl space-y-16 px-6">
+        <div class="relative z-10 mx-auto max-w-xl space-y-6 text-center md:space-y-12">
+            <h2 class="text-title text-4xl font-medium lg:text-5xl">Client Testimonials</h2>
+            <!-- <p class="text-body">Gemini is evolving to be more than just the models. It supports an entire to the APIs and platforms helping developers and businesses innovate.</p> -->
+        </div>
+
+        <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-4 md:grid-rows-3 lg:grid-rows-2">
+            {
+                content.map(({cardClasses, logo, quote, name, company, photo}, i) => (
+                    <div class:list={[cardClasses, 'bg-gray-100 p-6 flex flex-col gap-8 rounded-lg']}>
+                        {logo && <Picture src={logo} class="h-8 w-fit" alt="photo" />}
+                        <blockquote class:list={!i && ["text-xl font-medium"]}>"{quote}"</blockquote>
+                        <div class="flex gap-3">
+                            <Picture src={photo} class="h-9 w-fit rounded-full my-auto" alt="photo" />
+                            <div class="flex flex-col">
+                                <cite class="text-sm font-medium">{name}</cite>
+                                <i class="text-gray-600 text-sm">{company}</i>
+                            </div>
                         </div>
-                        <p class="text-body text-sm">It supports an entire helping developers and innovate.</p>
                     </div>
-                    <div class="space-y-2">
-                        <div class="flex items-center gap-2">
-                            <svg class="size-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M16.5 7.5h-9v9h9v-9Z"></path>
-                                <path
-                                    fill-rule="evenodd"
-                                    d="M8.25 2.25A.75.75 0 0 1 9 3v.75h2.25V3a.75.75 0 0 1 1.5 0v.75H15V3a.75.75 0 0 1 1.5 0v.75h.75a3 3 0 0 1 3 3v.75H21A.75.75 0 0 1 21 9h-.75v2.25H21a.75.75 0 0 1 0 1.5h-.75V15H21a.75.75 0 0 1 0 1.5h-.75v.75a3 3 0 0 1-3 3h-.75V21a.75.75 0 0 1-1.5 0v-.75h-2.25V21a.75.75 0 0 1-1.5 0v-.75H9V21a.75.75 0 0 1-1.5 0v-.75h-.75a3 3 0 0 1-3-3v-.75H3A.75.75 0 0 1 3 15h.75v-2.25H3a.75.75 0 0 1 0-1.5h.75V9H3a.75.75 0 0 1 0-1.5h.75v-.75a3 3 0 0 1 3-3h.75V3a.75.75 0 0 1 .75-.75ZM6 6.75A.75.75 0 0 1 6.75 6h10.5a.75.75 0 0 1 .75.75v10.5a.75.75 0 0 1-.75.75H6.75a.75.75 0 0 1-.75-.75V6.75Z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                            <h3 class="text-title text-sm font-medium">Powerful</h3>
-                        </div>
-                        <p class="text-body text-sm">It supports an entire helping developers and businesses.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="relative mt-6 sm:mt-0">
-                <div class="absolute -inset-20 bg-[linear-gradient(to_right,var(--ui-border-color)_1px,transparent_1px),linear-gradient(to_bottom,var(--ui-border-color)_1px,transparent_1px)] bg-[size:24px_24px] sm:-inset-40"></div>
-                <div class="absolute -inset-20 bg-gradient-to-b from-gray-50 via-transparent to-gray-50 sm:-inset-40 dark:from-gray-950 dark:via-transparent dark:to-gray-950"></div>
-                <div class="absolute -inset-20 bg-gradient-to-r from-gray-50 via-transparent to-gray-50 sm:-inset-40 dark:from-gray-950 dark:via-transparent dark:to-gray-950"></div>
-                <div class="tls-shadow-md rounded-card relative overflow-hidden shadow-gray-950/[0.03]">
-                    <img class="relative dark:hidden" src="/blocks/traf.png" alt="" />
-                    <img class="relative hidden grayscale dark:block" src="/blocks/traf-dark.png" alt="" />
-                </div>
-            </div>
+                ))
+            }
         </div>
     </div>
 </section>
+<style>
+    .card {
+        background-color: aqua;
+    }
+</style>
