Implement portfolio section with project details and responsive layout

--- a/src/components/bulletpoints.astro
+++ b/src/components/bulletpoints.astro
@@ -48,8 +48,8 @@ const content = [
 
 ]
 ---
-<section class="bg-white py-20 dark:bg-transparent">
-    <div class="mx-auto space-y-16 px-4 md:max-w-5xl">
+<section class="bg-white pb-16 md:py-20 dark:bg-transparent">
+    <div class="mx-auto space-y-16 px-4 md:max-w-5xl lg:max-w-max lg:px-0">
         <div class="relative z-10 mx-auto max-w-xl space-y-6 text-center md:space-y-12">
             <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">Client Testimonials</h2>
             <!-- <p class="text-body">Gemini is evolving to be more than just the models. It supports an entire to the APIs and platforms helping developers and businesses innovate.</p> -->
@@ -74,8 +74,3 @@ const content = [
         </div>
     </div>
 </section>
-<style>
-    .card {
-        background-color: aqua;
-    }
-</style>
