--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,9 +5,8 @@ import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
 
-<main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="mb-12 md:order-1 block relative lg:w-7/12">
+<main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-12">
+  <div class="mb-12 md:order-1 block relative lg:w-7/12 md:my-12">
     <div
         class="bg-primary rounded-full absolute aspect-square w-1/2 lg:w-auto lg:h-full top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 opacity-85"
     >
