--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -1,4 +1,73 @@
 ---
 import FullScreenSection from "@components/FullScreenSection.astro";
+import { Picture } from "astro:assets";
+
+import portfolio_apple_lg from "@images/portfolio_apple_lg.png";
+
+type Button = {
+    text: string;
+    url: string | null;
+    // primary: boolean;
+};
+
+type Content = {
+    image?: string;
+    label: string;
+    title: string;
+    description: string;
+    button?: Button;
+};
+
+const portfolioContent: Content[] = [
+    {
+        label: "8x Faster Email Production",
+        title: "La Redoute",
+        description: "Partnered with France's largest fashion retailer to eliminate operational bottlenecks. We automated email template creation, reducing production time by <strong>8x</strong>, and built a financial dashboard that accelerated referral payments by <strong>5x</strong>."
+    },
+    {
+        label: "Code Review On Hand",
+        title: "MATE",
+        description: "Developed and launched a browser extension that enables developers to check code on any GitHub repository instantly, saving significant development time and improving code quality.",
+        button: {
+          text: "Read more",
+          url: "https://mate.apalevich.com",
+        }
+    },
+    {
+        label: "3-Month AI Implementation",
+        title: "Hubba",
+        description: "Delivered an interactive AI chat application from concept to production in just three months. Our comprehensive approach included development and consulting services that enhanced API architecture and streamlined development processes."
+    },
+    {
+        label: "Accelerated Market Entry",
+        title: "Unbiased.com",
+        description: "Fast-tracked US market entry with a new Vue/Nuxt frontend delivered ahead of schedule. Additionally, I improved infrastructure with shared UI component storage and recruited a top-tier Infrastructure Engineer to strengthen the client's team."
+    }
+]
 ---
-<FullScreenSection />
+<section class="bg-white dark:bg-transparent">
+    <div class="space-y-12 md:px-4  lg:px-0">
+        <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight text-center">Selected Projects</h2>
+        <div class="grid gap-[1px] md:grid-cols-2 *:py-6 md:*:py-12 bg-zinc-200 py-[1px] mx-4 md:mx-0">
+            { 
+                portfolioContent.map(({label, title, description}, i) => (
+                    <div class:list={[
+                        "flex flex-col space-y-6 sm:pr-6 lg:pr-12 bg-white",
+                        i%2===0 ? "md:pr-6 md:pl-0" : "md:pl-6 md:pr-0",
+                        "lg:px-12"
+                    ]}>
+                        <div class="">
+                            <h3 class="font-medium text-title text-xl">{title}</h3>
+                            <p class="mt-1 text-base lg:text-lg font-normal text-gray-500 opacity-50">{label}</p>
+                        </div>
+                        <p class="text-zinc-700 md:grow " set:html={description}></p>
+                        <div class="relative pt-6">
+                            <div class="absolute inset-0 z-[1] bg-gradient-to-br from-white dark:from-gray-950"></div>
+                            <Picture src={portfolio_apple_lg} alt="screenshot" />
+                        </div>
+                    </div>
+                ))
+            }
+        </div>
+    </div>
+</section>
