Adjust card icon positioning and opacity

--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -29,8 +29,8 @@ const {
               <slot name="links" />
           </div>
           <div class:list={[
-            "rounded-full p-2 w-40 h-40 absolute -right-1/4 -bottom-1/4 md:left-3/4 lg:bottom-0 opacity-10 scale-150",
-            "bg-black" // TODO: Make an onterface for icon base color
+            "rounded-full p-2 w-40 h-40 absolute -right-[75px] -bottom-[75px] opacity-5 scale-150",
+            "bg-black" // TODO: Make an interface for icon base color
           ]}>
             <slot name="icon" />
           </div>
