--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -37,11 +37,12 @@ import { Icon } from "astro-icon/components";
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
+        style="fancy"  
         href="mailto:hello@apalevich.com"
         target="_blank"
-        class="flex gap-1 items-center justify-center bg-gradient-to-l from-primary to-secondary"
+        class="flex gap-1 items-center justify-center "
         rel="noopener">
-        <Icon class="text-white w-4 h-4" name="bx:bxs-envelope" />
+          <Icon class="text-white w-4 h-4" name="bx:bxs-envelope" />
           Send an Email
       </Link>
       <Link
@@ -51,7 +52,7 @@ import { Icon } from "astro-icon/components";
         href="https://wa.me/995511106964"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-whatsapp" />
+          <Icon class="text-black w-4 h-4" name="bx:bxl-whatsapp" />
           WhatsApp
       </Link>
     </div>
