--- a/src/components/pricing.astro
+++ b/src/components/pricing.astro
@@ -25,7 +25,7 @@ const options = [
       <div class="grid gap-y-12 px-2 lg:[grid-template-columns:1fr_auto]">
           <div class="text-center lg:text-left">
               <h2 class="text-title mb-4 text-3xl font-semibold md:text-4xl">Pricing</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam eligendi inventore recusandae, consectetur alias animi veritatis. Rem, consequuntur iusto tempore reiciendis suscipit dolores, perspiciatis tempora, voluptatem rerum totam laboriosam.</p>
+              <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam eligendi inventore recusandae, consectetur alias animi veritatis. Rem, consequuntur iusto tempore reiciendis suscipit dolores, perspiciatis tempora, voluptatem rerum totam laboriosam.</p> -->
           </div>
           <div class="divide-y divide-dashed sm:mx-auto sm:max-w-lg lg:mx-0">
               {
@@ -36,7 +36,7 @@ const options = [
                     <Link
                       href="mailto:hello@apalevich.com"
                       target="_blank"
-                      style="primary"
+                      style="fancy"
                       class="text-2xl font-bold mt-12">
                         {price}
                     </Link>
