--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  style?: "outline" | "primary" | "inverted" | "muted";
+  style?: "outline" | "primary" | "inverted" | "muted" | "fancy" ;
   class?: string;
   [x: string]: any;
 }
@@ -27,6 +27,7 @@ const styles = {
   primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
   inverted: "bg-white text-black   border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+  fancy: "bg-gradient-to-l from-primary to-secondary text-white animate-fancy bg-[length:200%_100%]",
 };
 ---
 
@@ -42,3 +43,39 @@ const styles = {
   ]}
   ><slot />
 </a>
+<!-- <style scoped>
+@keyframes masked{
+  /* 0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 10000px 5000px;
+  } */
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+a.fancy {
+  background: linear-gradient(-45deg,#4a0908,#08494a,#4a0908,#08494a);
+  background-size: 200% 200%;
+  animation: fancy 5s linear infinite;
+  /* background: -webkit-linear-gradient(
+      left,
+      #4a0908 0%,
+      #08494A 50%,
+      #4a0908 100%,
+    )
+    repeat; */
+  /* animation: masked 2s linear infinite alternate; */
+  /* -webkit-animation: masked 5s linear infinite alternate;
+  -moz-animation:masked 35s linear infinite alternate;
+  -o-animation: masked 35s linear infinite alternate; */
+}
+</style> -->
