--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Features from "@components/features.astro";
@@ -6,10 +7,9 @@ import BulletPoints from "@components/bulletpoints.astro";
 import Portfolio from "@components/portfolio.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
-import Layout from "@layouts/Layout.astro";
+import Pricing from "@components/pricing.astro";
 
 ---
-
 <Layout title="Technical Solutions for Marketing Leaders">
   <Container>
     <Hero />
@@ -17,6 +17,7 @@ import Layout from "@layouts/Layout.astro";
     <BulletPoints />
     <Portfolio />
     <Logos />
+    <Pricing />
     <Cta />
   </Container>
 </Layout>
