Refine section text and styling

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -12,7 +12,7 @@ import { CALL_LINK_20, EMAIL_LINK } from "consts.ts"
     Our team is made up exclusively of senior professionals with up to 8 years of proven track record of success in their respective fields.
   </p> -->
   <div class="flex gap-4 flex-col mt-5">
-    <Link href={CALL_LINK_20} style="inverted">Let's Talk</Link>
+    <Link href={CALL_LINK_20} style="inverted">Let's have a call</Link>
     <Link href={EMAIL_LINK} class="text-xs text-gray-300 font-thin">hello@apalevich.com</Link>
   </div>
 </div>
