--- a/src/components/bulletpoints.astro
+++ b/src/components/bulletpoints.astro
@@ -48,7 +48,7 @@ const content = [
 
 ]
 ---
-<section class="bg-white pb-16 md:py-20 dark:bg-transparent">
+<section class="bg-white pb-16 lg:py-20 dark:bg-transparent">
     <div class="mx-auto space-y-16 px-4 md:max-w-5xl lg:max-w-max lg:px-0">
         <div class="relative z-10 mx-auto max-w-xl space-y-6 text-center md:space-y-12">
             <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">Testimonials</h2>
