--- a/src/pages/unavailable.astro
+++ b/src/pages/unavailable.astro
@@ -5,7 +5,7 @@ import Layout from "@layouts/Layout.astro";
 
 <Layout title="Under construction">
   <Container>
-    <a href="/">
+    <a href="https://apalevich.pro" target="_self">
       <div class="min-h-[calc(100vh-16rem)] flex items-center justify-center">
         <div class="mt-16 text-center">
           <p class="text-sm my-4 text-slate-600">This site is under construction.</p>
