--- a/src/pages/unavailable.astro
+++ b/src/pages/unavailable.astro
@@ -3,7 +3,7 @@ import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="Under construction">
+<Layout>
   <Container>
     <a href="https://apalevich.pro" target="_self">
       <div class="min-h-[calc(100vh-16rem)] flex items-center justify-center">
